[skip ci] updated

--- a/series/14.md
+++ b/series/14.md
@@ -42,7 +42,7 @@
 
 コーヒーカップを粘土でできていると想像する。取っ手を少しずつ太くし、本体を小さくしていく。この変形を続けると、最終的にドーナツ（トーラス）の形になる。この過程で、粘土を切ったり、新しく穴を開けたり、穴を塞いだりしていない。
 
-このような変形を **連続変形（homeomorphism）** と呼び、連続変形で移り合える図形は「トポロジー的に同じ」（同相）とみなす。
+このとき、コーヒーカップとドーナツは **同相（homeomorphic）** であるという。同相とは、両者の間に「連続かつ逆も連続な全単射（同相写像）」が存在することを意味する。直感的には「切らずに連続的に変形できる」ということだ。
 
 > [!NOTE]
 > **同相の直感：** 二つの空間が同相であるとは、一方を「ゴムのように」伸び縮みさせて他方に変形できることを意味する。ただし、切断・接着は許されない。この条件下で保存される性質が「位相的性質」である。
@@ -111,6 +111,8 @@ $$K_0 \subseteq K_1 \subseteq K_2 \subseteq \cdots \subseteq K_m$$
 
 > [!NOTE]
 > **Vietoris-Rips複体とČech複体：** 上記の構成法には複数のバリエーションがある。**Vietoris-Rips複体** は「全ての点対が $2\epsilon$ 以内にある」場合に単体を作る。**Čech複体** は「球の共通部分が非空」な場合に単体を作る。Rips複体の方が計算が容易だが、Čech複体の方が幾何学的に正確。実用上はRips複体が多く使われる。
+>
+> **閾値の流儀：** 文献によって閾値を $\epsilon$（球の半径）で書くか $2\epsilon$（直径）で書くかが異なる。実装や論文を参照する際は、どちらの流儀かを確認すること。
 
 ### パーシステンス図：穴の「寿命」を可視化する
 
@@ -154,7 +156,9 @@ death
 
 ### 表現空間のトポロジー
 
-深層学習モデルは、入力データを高次元の表現空間に写像する。この表現空間のトポロジー的構造が、モデルの性能や振る舞いに影響を与える可能性がある。
+深層学習モデルは、入力データを高次元の表現空間に写像する。この表現空間のトポロジー的構造と、モデルの性能や振る舞いの間に **相関が観察される** ことがある。ただし、これが因果関係（トポロジーが性能を決める）なのか、単なる相関なのか、あるいは共通の原因による見かけの関係なのかは、多くの場合まだ明らかではない。
+
+以下では、TDAが表現空間の「診断・観察ツール」として使われている例を紹介する。
 
 **応用例1：クラスタリングの質の評価**
 
@@ -201,6 +205,13 @@ TDAの深層学習への応用は、以下のような段階にある：
 
 > [!NOTE]
 > 以下のコードは `ripser` (pip install ripser) と `persim` (pip install persim) を使用する。Python >= 3.8 を推奨。
+
+> [!CAUTION]
+> **実務上の注意点：**
+> - **スケーリング**：データの標準化・正規化により距離の意味が変わる。前処理の選択がパーシステンス図に大きく影響するため、目的に応じて慎重に選ぶこと。
+> - **サブサンプリング**：高次元埋め込みでは点数が少なくても計算が重い。数百〜数千点程度へのサブサンプリングが実務上ほぼ必須。
+> - **統計的安定性**：点数が少ないとパーシステンス図は不安定になる。ブートストラップや複数回のサンプリングで安定性を確認すること。
+> - **クラス間比較**：ラベル別に解析する場合、クラス間で点数を揃えるか、点数の違いを考慮した解釈が必要。
 
 ### 基本的な使い方
 
@@ -422,7 +433,7 @@ def track_topology_during_training(
 ```
 
 > [!CAUTION]
-> **計算コストに注意：** パーシステントホモロジーの計算量は、点の数 $n$ に対して最悪 $O(n^3)$ 程度になる。大規模なデータセットでは、サブサンプリングや近似手法（例：Ripser++）の使用を検討すること。
+> **計算コストに注意：** パーシステントホモロジーの計算は、単体複体のサイズに依存する。Vietoris-Rips複体では、点の数 $n$ に対して単体数が組合せ爆発的に増加しうるため、高次元や大規模データでは計算が非常に重くなる。実務では、サブサンプリング、次元の制限（maxdim=1程度）、近似手法（例：Ripser++、Approximate Rips）の使用がほぼ必須である。
 
 ## まとめ
 
