--- a/series/14.md
+++ b/series/14.md
@@ -56,7 +56,7 @@
 | $\beta_0$ | 連結成分の数 | 「島」がいくつあるか |
 | $\beta_1$ | 1次元の穴（ループ）の数 | 「トンネル」がいくつあるか |
 | $\beta_2$ | 2次元の穴（空洞）の数 | 「空洞」がいくつあるか |
-| $\beta_n$ | $n$次元の穴の数 | 高次元の「穴」 |
+| $\beta_n$ | $n$ 次元の穴の数 | 高次元の「穴」 |
 
 具体例を見よう：
 
@@ -103,7 +103,7 @@
 
 **Step 4: $\epsilon$ を0から∞まで動かす**
 
-$\epsilon = 0$ では孤立した点のみ。$\epsilon$ を大きくすると、点がつながり始め、ループができ、やがて全体が一つの塊になる。
+$\epsilon = 0$ では孤立した点のみ。 $\epsilon$ を大きくすると、点がつながり始め、ループができ、やがて全体が一つの塊になる。
 
 この過程で得られる単体複体の列を **フィルトレーション（filtration）** と呼ぶ：
 
@@ -112,18 +112,18 @@ $$K_0 \subseteq K_1 \subseteq K_2 \subseteq \cdots \subseteq K_m$$
 > [!NOTE]
 > **Vietoris-Rips複体とČech複体：** 上記の構成法には複数のバリエーションがある。**Vietoris-Rips複体** は「全ての点対が $2\epsilon$ 以内にある」場合に単体を作る（同値に、距離閾値以内の辺でできるグラフのクリーク（完全部分グラフ）から単体を構成する）。**Čech複体** は「球の共通部分が非空」な場合に単体を作る。Rips複体の方が計算が容易だが、Čech複体の方が幾何学的に正確。実用上はRips複体が多く使われる。
 >
-> **閾値の流儀：** 文献によって閾値を $\epsilon$（球の半径）で書くか $2\epsilon$（直径）で書くかが異なる。実装や論文を参照する際は、どちらの流儀かを確認すること。
+> **閾値の流儀：** 文献によって閾値を $\epsilon$ （球の半径）で書くか $2\epsilon$ （直径）で書くかが異なる。実装や論文を参照する際は、どちらの流儀かを確認すること。
 
 ### パーシステンス図：穴の「寿命」を可視化する
 
 フィルトレーションを追跡すると、各「穴」には **誕生時刻（birth）** と **死亡時刻（death）** が定まる。
 
 - **誕生（birth）**：その穴が初めて現れる $\epsilon$ の値
-- **死亡（death）**：その穴が消える（塞がる）$\epsilon$ の値
+- **死亡（death）**：その穴が消える（塞がる） $\epsilon$ の値
 
 これを2次元平面上にプロットしたものが **パーシステンス図（persistence diagram）** である。
 
-```
+```txt
 death
   ^
   |     *          * は「穴」を表す点
@@ -143,7 +143,7 @@ death
 
 パーシステンス図と等価な情報を持つ **バーコード（barcode）** も広く使われる。各穴を、誕生から死亡までの区間として水平線で表す。
 
-```
+```txt
        birth          death
          |--------------|   長いバー = 重要な構造
          |---|              短いバー = ノイズ？
@@ -208,18 +208,18 @@ TDAの深層学習への応用は、以下のような段階にある：
 
 > [!CAUTION]
 > **実務上の注意点：**
+>
 > - **スケーリング**：データの標準化・正規化により距離の意味が変わる。前処理の選択がパーシステンス図に大きく影響するため、目的に応じて慎重に選ぶこと。
 > - **サブサンプリング**：高次元埋め込みでは、データ次元・maxdim・実装に依存するが、数百〜数千点程度でも計算が重くなりうる。まずはサブサンプリングを検討すること。
 > - **統計的安定性**：点数が少ないとパーシステンス図は不安定になる。ブートストラップや複数回のサンプリングで安定性を確認すること。
 > - **クラス間比較**：ラベル別に解析する場合、クラス間で点数を揃えるか、点数の違いを考慮した解釈が必要。
+>
 
 ### 基本的な使い方
 
 ```14_ripser_basic.py
 import numpy as np
 from ripser import ripser
-from persim import plot_diagrams
-import matplotlib.pyplot as plt
 
 
 def compute_persistence(data, maxdim=1):
@@ -257,10 +257,10 @@ print(f"最大持続性: {h1_persistence.max():.3f}")
 ### パーシステンス図の可視化
 
 ```14_visualization.py
-import numpy as np
-from ripser import ripser
-from persim import plot_diagrams
 import matplotlib.pyplot as plt
+import numpy as np
+from persim import plot_diagrams
+from ripser import ripser
 
 
 def visualize_persistence(data, title="Persistence Diagram"):
@@ -367,6 +367,9 @@ def analyze_representation_topology(embeddings, labels, maxdim=1):
 
 ### 学習過程のトポロジー追跡
 
+<details>
+<summary>コード例: 14_training_topology.py</summary>
+
 ```14_training_topology.py
 import numpy as np
 from ripser import ripser
@@ -431,6 +434,8 @@ def track_topology_during_training(
 
     return topology_history
 ```
+
+</details>
 
 > [!CAUTION]
 > **計算コストに注意：** パーシステントホモロジーの計算は、単体複体のサイズに依存する。Vietoris-Rips複体では、点の数 $n$ に対して単体数が組合せ爆発的に増加しうるため、高次元や大規模データでは計算が非常に重くなる。実務では、サブサンプリング、次元の制限（maxdim=1程度）、近似手法（利用可能であればRipser++、Approximate Rips等）の使用を検討すること。
